fixing dark mode color

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .dark {
-  background-color: #121212 !important;
+  background-color: #1e1a1a !important;
   color: #E0E0E0 !important;
 }
 
